--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <p>
             <ul>
                 <li>
-                    <a target="_blank" href="../NewProvidence/site/index.html">Работа 1</a>
+                    <a target="_blank" href="/NewProvidence/site/index.html">Работа 1</a>
                 </li>
                 <li>
-                    <a target="_blank" href="../WeatherApp/site/index.html">Работа 2</a>
+                    <a target="_blank" href="/WeatherApp/site/index.html">Работа 2</a>
                 </li>
                 <li>
-                    <a target="_blank" href="../corporate landing/site/index.html">Работа 3</a>
+                    <a target="_blank" href="/corporate landing/site/index.html">Работа 3</a>
                 </li>
                 <li>
-                    <a target="_blank" href="../free_office/site/index.html">Работа 4</a>
+                    <a target="_blank" href="/free_office/site/index.html">Работа 4</a>
                 </li>
 
             </ul>
