--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="wrapper">
 
-        <h1>МОИ РАБОТЫ</h1>
+        <h1>МОИ РАБ</h1>
         <p>
             <ul>
                 <li>
