--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 
     <div class="wrapper">
 
-        <h1>МОИ РАБОТЫ</h1>
+        <h1>MY WORKS</h1>
         <p>
             <ul>
                 <li>
-                    <a target="_blank" href="/dmxxi.com/index.html">Работа 1</a>
+                    <a target="_blank" href="/dmxxi.com/index.html">WORK 1</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/NewProvidence/site/index.html">Работа 2</a>
+                    <a target="_blank" href="/NewProvidence/site/index.html">WORK 2</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/WeatherApp/site/index.html">Работа 3</a>
+                    <a target="_blank" href="/WeatherApp/site/index.html">WORK 3</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/free_office/site/index.html">Работа 4</a>
+                    <a target="_blank" href="/free_office/site/index.html">WORK 4</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/corporate landing/site/index.html">Работа 5</a>
+                    <a target="_blank" href="/corporate landing/site/index.html">WORK 5</a>
                 </li>
 
             </ul>
