--- a/index.html
+++ b/index.html
@@ -15,22 +15,31 @@
     <div class="wrapper">
 
         <h1>MY WORKS</h1>
+
+        <br> <br>
         <p>
             <ul>
                 <li>
-                    <a target="_blank" href="/dmxxi.com/index.html">WORK 1</a>
+                    <a target="_blank" href="/namari/index.html">WORK 1</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/NewProvidence/site/index.html">WORK 2</a>
+                    <a target="_blank" href="/dmxxi.com/index.html">WORK 2</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/WeatherApp/site/index.html">WORK 3</a>
+                    <a target="_blank" href="/NewProvidence/site/index.html">WORK 3</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/free_office/site/index.html">WORK 4</a>
+                    <a target="_blank" href="/WeatherApp/site/index.html">WORK 4</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/corporate landing/site/index.html">WORK 5</a>
+                    <a target="_blank" href="/free_office/site/index.html">WORK 5</a>
+                </li>
+                <li>
+                    <a target="_blank" href="/corporate landing/site/index.html">WORK 6</a>
+                </li>
+
+                <li>
+                    <a target="_blank" href="/outox.ua/index.html">WORK FOR NANOPROTEC</a>
                 </li>
 
             </ul>
