--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </li>
 
                 <li>
-                    <a target="_blank" href="/outox.ua/index.html">WORK FOR NANOPROTEC</a>
+                    <a target="_blank" href="/MYoutox/index.html">WORK FOR NANOPROTEC</a>
                 </li>
 
             </ul>
