--- a/index.html
+++ b/index.html
@@ -45,7 +45,20 @@
             </ul>
         </p>
     </div>
-
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="js/background-video"></script>
+    <script>
+        $(document).ready(function () {
+            var videobackground = new $.backgroundVideo($('body'), {
+                "align": "centerXY",
+                "width": 1280,
+                "height": 720,
+                "path": "media/",
+                "filename": "cloud",
+                "types": ["mp4", "ogg", "webm"]
+            });
+        });
+    </script>
 </body>
 
 </html>
