--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </p>
         </div>
     </div>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 
     <script src="js/jquery.vide.min.js"></script>
 
