--- a/sites/namari/index.html
+++ b/sites/namari/index.html
@@ -147,14 +147,14 @@
                 <div class="col-38">
 
                     <div class="section-heading">
-                        <h1>A FREE AND SIMPLE LANDING PAGE</h1>
-                        <h2>Namari is a free landing page template you can use for your projects. It is free to use for
+                        <h1>YAW! THIS IS ONE OF MY SITES I MADE FOR YOUR WATCHING</h1>
+                        <h2>Namari is a you can use for your projects. It is free to use for
                             your
                             personal and commercial projects, enjoy!</h2>
                     </div>
 
                     <!--Call to Action-->
-                    <a href="#" class="button">START CREATING TODAY</a>
+                    <a href="#" class="button">START TODAY</a>
                     <!--End Call to Action-->
 
                 </div>
