--- a/sites/namari/index.html
+++ b/sites/namari/index.html
@@ -175,8 +175,8 @@
                         <div class="section-heading">
                             <h3>SUCCESS</h3>
                             <h2 class="section-title">How We Help You To Sell Your Product</h2>
-                            <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                            <p class="section-subtitle">We exist on the market for 5 years. During this time we managed
+                                to gain experience to be sure to say that our cooperation with you will be successful</p>
                         </div>
 
                     </div>
