в процессе конт. форма

--- a/sites/Myfolio/src/index.html
+++ b/sites/Myfolio/src/index.html
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/normalize.css">
-
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	 crossorigin="anonymous">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,6 +50,252 @@
 
 	</header>
 
+
+	<section id="about-us">
+		<div class="container">
+			<div class="title-page">
+				<h2>ABOUT US</h2>
+				<img src="./images/obj1.png" alt="">
+				<p class="descr py-5">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minimquis. Lorem ipsum
+					dolor
+					sit amet,
+					consectetur adipisicing elit, quis nostrud ation ullamco ut labore et dolore magna aliqua. Ut enim ad minim
+					veniam, <strong>quis nostrud ation ullamco</strong> laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<ul class="stages">
+				<li class="stages_item stages-border">
+					<i class="far fa-bell fa-2x"></i>
+					<h3>Title goes here</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+				</li>
+				<li class="stages_item stages-border">
+					<i class="fas fa-pencil-alt fa-2x"></i>
+					<h3>Title goes here</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+				</li>
+				<li class="stages_item stages-border">
+					<i class="fas fa-cogs fa-2x"></i>
+					<h3>Title goes here</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+				</li>
+				<li class="stages_item">
+					<i class="fas fa-laptop fa-2x"></i>
+					<h3>Title goes here</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+				</li>
+			</ul>
+
+		</div>
+	</section>
+
+	<section id="services">
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<div class="title-page text-left ">
+						<h2>SERVICES</h2>
+						<img src="./images/obj1.png" alt="">
+						<p class="descr py-5 mw-100">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minimquis.
+							Lorem
+							ipsum
+							dolor
+						</p>
+					</div>
+					<div class="service-stages">
+						<div class="row">
+							<div class="service-stages_item text-left col-md-6">
+								<i class="fas fa-globe-europe fa-2x"></i>
+								<h3>Title goes here</h3>
+								<p class="descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+							</div>
+							<div class="service-stages_item text-left col-md-6">
+								<i class="fas fa-search fa-2x"></i>
+								<h3>Title goes here</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+							</div>
+						</div>
+						<div class="row mt-5">
+							<div class="service-stages_item text-left col-md-6">
+								<i class="far fa-clock fa-2x"></i>
+								<h3>Title goes here</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+							</div>
+							<div class="service-stages_item text-left col-md-6">
+								<i class="fas fa-chart-bar fa-2x"></i>
+								<h3>Title goes here</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit quis nostrud ation ullamco ut labore</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="services-img">
+						<picture>
+
+							<img src="./images/bg-serv.png" alt="">
+						</picture>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</section>
+
+	<section id="work">
+		<div class="container">
+			<div class="title-page">
+				<h2>ABOUT US</h2>
+				<img src="./images/obj1.png" alt="">
+				<p class="descr py-5">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minimquis. Lorem ipsum
+					dolor sit amet onsectetur adipisicing elit, quis nostrud ation ullamco ut labore et dolore magna aliqua.</p>
+			</div>
+		</div>
+		<div class="row mx-0">
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f8.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f1.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f2.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f3.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f4.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f5.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f6.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-3 px-0">
+				<div class="folio">
+					<div class="hcaption">
+						<h3>title goes here</h3>
+
+						<p class="descr " data-size="litle">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad
+							minimquis.</p>
+					</div>
+					<div class="folio-work">
+						<img src="./images/portfolio/f7.jpg" alt="">
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+
+	</section>
+
+	<section id="contact-us">
+		<div class="container">
+			<div class="title-page">
+				<h2>CONTACT US</h2>
+				<img src="./images/obj1.png" alt="">
+				<p class="descr py-5">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minimquis. Lorem ipsum
+					dolor sit amet onsectetur adipisicing elit, quis nostrud ation ullamco ut labore et dolore magna aliqua.</p>
+			</div>
+		</div>
+
+		<div class="write-us bg-dark">
+			<div class="form">
+				<input class="form_item" type="text" placeholder="NAME">
+				<input type="text" class="form_item" placeholder="EMAIL ADDRESS">
+				<input type="text" class="form_item" placeholder="MESSAGE">
+				<textarea class="form_item" name="" id="" cols="30" rows="1"></textarea>
+			</div>
+
+			<button class="btn">SUMBIT</button>
+		</div>
+	</section>
 
 
 
