завершена статическая часть

--- a/sites/Myfolio/src/index.html
+++ b/sites/Myfolio/src/index.html
@@ -289,13 +289,17 @@
 			<div class="form">
 				<input class="form_item" type="text" placeholder="NAME">
 				<input type="text" class="form_item" placeholder="EMAIL ADDRESS">
-				<input type="text" class="form_item" placeholder="MESSAGE">
-				<textarea class="form_item" name="" id="" cols="30" rows="1"></textarea>
+				<h6 class="">MESSAGE</h6>
+				<textarea class="form_item" name="submit" id="submit" cols="30" rows="3"></textarea>
 			</div>
 
-			<button class="btn">SUMBIT</button>
+			<button class="btn mx-auto mt-3">SUMBIT</button>
 		</div>
 	</section>
+
+	<footer class="footer ">
+		<span>© MYFOLIO - Design by Ashok | Code by Oleg</span>
+	</footer>
 
 
 
