--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <br> <br>
             <p>
                 <ul>
-                    <!-- <li>
-                        <a target="_blank" href="/sites/namari/index.html">WORK 1</a>
-                    </li> -->
+                    <li>
+                        <a target="_blank" href="/sites/Myfolio/build/index.html">WORK 1</a>
+                    </li>
                     <li>
                         <a target="_blank" href="/sites/dmxxi.com/index.html">WORK 2</a>
                     </li>
@@ -44,8 +44,8 @@
             </p>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
     <script src="js/jquery.vide.min.js"></script>
 
