--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="google-site-verification" content="J99-V_GQ--blkzDtOmNNm8zphrOIIicrpiNBr4jcn2k" />
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <title>My Portfolio</title>
 </head>
