создана структура, подключены все библиотеки

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a target="_blank" href="/sites/free_office/site/index.html">WORK 5</a>
                     </li>
                     <li>
-                        <a target="_blank" href="/sites/corporate landing/site/index.html">WORK 6</a>
+                        <a target="_blank" href="/sites/corporate_landing/site/index.html">WORK 6</a>
                     </li>
 
 
