добавлена новая работа

--- a/index.html
+++ b/index.html
@@ -21,22 +21,25 @@
             <p>
                 <ul>
                     <li>
-                        <a target="_blank" href="/sites/Myfolio/build/index.html">WORK 1</a>
+                        <a target="_blank" href="/sites/namari/index.html">WORK 1</a>
                     </li>
                     <li>
-                        <a target="_blank" href="/sites/dmxxi.com/index.html">WORK 2</a>
+                        <a target="_blank" href="/sites/Myfolio/build/index.html">WORK 2</a>
                     </li>
                     <li>
-                        <a target="_blank" href="/sites/NewProvidence/site/index.html">WORK 3</a>
+                        <a target="_blank" href="/sites/dmxxi.com/index.html">WORK 3</a>
                     </li>
                     <li>
-                        <a target="_blank" href="/sites/WeatherApp/site/index.html">WORK 4</a>
+                        <a target="_blank" href="/sites/NewProvidence/site/index.html">WORK 4</a>
                     </li>
                     <li>
-                        <a target="_blank" href="/sites/free_office/site/index.html">WORK 5</a>
+                        <a target="_blank" href="/sites/WeatherApp/site/index.html">WORK 5</a>
                     </li>
                     <li>
-                        <a target="_blank" href="/sites/corporate_landing/site/index.html">WORK 6</a>
+                        <a target="_blank" href="/sites/free_office/site/index.html">WORK 6</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="/sites/corporate_landing/site/index.html">WORK 7</a>
                     </li>
 
 
